// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          disabled={true}
          placeholder=" "
          type="time"
          value="Text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 fCNdsc"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 hiJSVK"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 liUDyj"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder=" "
          readOnly={true}
          type="time"
          value="Read only text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="xsmall"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="small"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 iZYQRx"
          placeholder="medium"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 bVigKL"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 eRgNAh"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 dKhopI"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
